--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body .container {
-  background-image: url(/images/background.jpg);
+  background-image: url(images/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 90%;
