--- a/sass/style.scss
+++ b/sass/style.scss
@@ -94,3 +94,30 @@ body {
         padding: 0px;
     }
 }
+
+
+
+.column {
+    position: relative;
+
+    .btn-delete {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        background-color: #7c6fa7;
+        color: #fff;
+        ;
+    }
+}
+
+
+.card {
+    position: relative;
+
+    .card-delete {
+        position: absolute;
+        right: 0px;
+        margin: 0px;
+        color: #7c6fa7;
+    }
+}
